# anime-image-upscaler-api

./: .dockerignore  .gitignore  DEPLOYMENT.md  DOCKER_README.md  Dockerfile  Dockerfile.alternative  Dockerfile.cpu  Dockerfile.gpu-alternative  Dockerfile.python-gpu  LICENSE  QUICKSTART.md  README.md  config.env  config.env.example  config_manager.py  deploy.sh  docker-compose.cpu.yml  docker-compose.python-gpu.yml  docker-compose.yml  docker-entrypoint.sh  enhanced_test_client.py  init_git_repo.bat  main.py  performance_test.py  pyproject.toml  requirements.txt  start.sh  start_modern.py  start_server.py  test_client.py  test_docker.py  test_docker_build.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app/: __init__.py  config.py  main.py
app/api/v1/: health.py  system.py  upscale.py
app/core/: model_manager.py
app/models/: __init__.py  request.py  response.py  task.py
app/utils/: exceptions.py
docs/: CONFIG_GUIDE.md  CONTRIBUTING.md  README.md
requirements/: base.txt  dev.txt
scripts/: __init__.py  config_manager.py  install_dependencies.py  setup_firewall.bat
tests/: __init__.py  batch_processor.py  network_test.py
